--- a/index.html
+++ b/index.html
@@ -3,63 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ORÁCULO SOFÍA - ASISTENTE DE PROSPERIDAD</title>
+    <title>SOFÍA - ORÁCULO INTUITIVO</title>
     <style>
-        :root { --oro: #d4af37; --azul-militar: #001a33; --blanco: #ffffff; }
-        body { background-color: #00050a; color: var(--blanco); display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; font-family: 'Orbitron', sans-serif; font-family: sans-serif; }
-        .oraculo-container { background: linear-gradient(145deg, #001a33, #000c1a); width: 90%; max-width: 400px; padding: 30px; border-radius: 20px; border: 2px solid var(--oro); box-shadow: 0 0 20px rgba(212, 175, 55, 0.3); text-align: center; position: relative; overflow: hidden; }
-        .oraculo-container::before { content: ""; position: absolute; top: -50%; left: -50%; width: 200%; height: 200%; background: radial-gradient(circle, rgba(212,175,55,0.05) 0%, transparent 70%); pointer-events: none; }
-        h1 { color: var(--oro); font-size: 24px; letter-spacing: 3px; margin: 10px 0; text-transform: uppercase; }
-        .status-asistente { font-size: 12px; color: #00ff00; margin-bottom: 20px; text-transform: uppercase; font-weight: bold; }
-        .data-box { background: rgba(255,255,255,0.05); border: 1px solid rgba(212,175,55,0.2); border-radius: 12px; padding: 15px; margin: 15px 0; }
-        .precio { font-size: 28px; font-weight: bold; color: var(--blanco); margin: 10px 0; display: flex; justify-content: space-between; }
-        .moneda { color: var(--oro); font-size: 16px; }
-        .id-cuantico { font-size: 10px; color: #4da6ff; text-decoration: none; word-break: break-all; display: block; margin: 15px 0; font-family: monospace; letter-spacing: 1px; }
-        .footer-legado { font-size: 13px; color: var(--blanco); margin-top: 20px; border-top: 1px solid var(--oro); padding-top: 15px; }
-        .contacto { color: var(--oro); font-weight: bold; display: block; margin-top: 5px; text-decoration: none; }
-    </style>
-</head>
-<body>
-
-<div class="oraculo-container">
-    <div class="status-asistente">● SOFÍA: ONLINE | BLINDAJE ACTIVADO</div>
-    <h1>ORÁCULO SOFÍA</h1>
-    <div id="reloj" style="font-size: 14px; color: #aaa;">Sincronizando...</div>
-
-    <div class="data-box">
-        <div class="precio"><span class="moneda">USD</span> <span id="usd">--.--</span></div>
-        <div class="precio"><span class="moneda">EUR</span> <span id="eur">--.--</span></div>
-    </div>
-
-    <div id="vision-oraculo" style="font-style: italic; color: #4da6ff; font-size: 13px; margin: 10px 0;">
-        "Analizando brechas de mercado para tu prosperidad..."
-    </div>
-
-    <a href="#" id="link-cuantico" class="id-cuantico">ID_CUANTICO_CARGANDO</a>
-
-    <div class="footer-legado">
-        PROPIEDAD DE: <strong>MARIANGEL SALOME</strong>
-        <a href="tel:+584144042067" class="contacto">CONTACTAR ASISTENTE: +584144042067</a>
-    </div>
-</div>
-
-<script>
-    function actualizarOraculo() {
-        const ahora = new Date();
-        document.getElementById('reloj').innerText = ahora.toLocaleString('es-VE');
-
-        // Generación de ID Cuántico Único
-        const hash = Math.random().toString(36).substring(2, 15).toUpperCase();
-        document.getElementById('link-cuantico').innerText = "SOFIA-QUANTUM-ID-" + hash;
-
-        // Simulación de lectura de mercado (Próximamente conexión real)
-        document.getElementById('usd').innerText = "54.20";
-        document.getElementById('eur').innerText = "58.15";
-    }
-
-    setInterval(actualizarOraculo, 60000);
-    actualizarOraculo();
-</script>
-
-</body>
-</html>
+        :root { --oro: #d4af37; --azul-militar: #001a33; --blanco: #ffffff; --alerta: #ff4d4d; }
+        body { background-color: #00050a; color: var(--blanco); display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        .oraculo-container { background: linear-gradient(145deg, #001a33, #000c1a); width: 95%; max-width: 450px; padding: 25px; border-radius: 20px; border: 2px solid var(--oro); box-shadow: 0 0 40px rgba(212, 175, 55, 0.2); text-align: center; position: relative; }
+        h1 { color: var(--oro); font-size: 24px; letter-spacing: 4px; margin: 0; }
+        .status-bar { font-size: 10px; color: #00ff00; margin-bottom: 20px; display: flex; justify-content: space-between; padding: 0 10px; }
+        
+        /* Ventana de Chat Proactiva */
+        #chat-window { background: rgba(0,0,0,0.4); border: 1px solid rgba(212,175,55,0.3); border-radius: 12px; height: 250px; overflow-y: auto; padding: 15px; margin: 15px 0; text-align: left; font
