--- a/index.html
+++ b/index.html
@@ -3,69 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SOFÍA - NÚCLEO CUÁNTICO</title>
+    <title>SOFÍA - NÚCLEO ACTIVO</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         :root { --neon: #00f3ff; --oro: #d4af37; --fondo: #000814; }
-        body { background: var(--fondo); color: white; font-family: 'Rajdhani', sans-serif; height: 100vh; margin: 0; overflow: hidden; display: flex; justify-content: center; align-items: center; position: relative; }
+        body { background: var(--fondo); color: white; font-family: 'Rajdhani', sans-serif; height: 100vh; margin: 0; overflow: hidden; display: flex; justify-content: center; align-items: center; }
         
-        /* Fondo de Red Neuronal */
-        #canvas-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; opacity: 0.3; }
-
-        .glass-panel { background: rgba(0, 15, 30, 0.85); backdrop-filter: blur(20px); border: 1px solid rgba(0, 243, 255, 0.3); border-radius: 30px; width: 92%; max-width: 420px; height: 90vh; display: flex; flex-direction: column; box-shadow: 0 0 50px rgba(0, 243, 255, 0.15); border-top: 3px solid var(--oro); }
+        .glass-panel { background: rgba(0, 15, 30, 0.9); backdrop-filter: blur(20px); border: 1px solid rgba(0, 243, 255, 0.3); border-radius: 30px; width: 92%; max-width: 420px; height: 92vh; display: flex; flex-direction: column; box-shadow: 0 0 50px rgba(0, 243, 255, 0.2); border-top: 3px solid var(--oro); }
         
-        .header { padding: 20px; text-align: center; border-bottom: 1px solid rgba(0, 243, 255, 0.1); }
-        .header h1 { font-family: 'Orbitron', sans-serif; font-size: 26px; color: var(--neon); margin: 0; letter-spacing: 6px; text-shadow: 0 0 15px var(--neon); }
-        .status-pill { background: rgba(0, 255, 0, 0.1); border: 1px solid #00ff00; color: #00ff00; font-size: 9px; padding: 3px 12px; border-radius: 20px; text-transform: uppercase; margin-top: 10px; display: inline-block; box-shadow: 0 0 10px rgba(0,255,0,0.2); }
+        /* Panel de Cosecha */
+        .harvest-counter { background: rgba(212, 175, 55, 0.1); border-bottom: 1px solid var(--oro); padding: 10px; text-align: center; border-radius: 27px 27px 0 0; }
+        .harvest-val { font-family: 'Orbitron'; color: var(--oro); font-size: 18px; text-shadow: 0 0 10px var(--oro); }
 
-        #chat-flow { flex-grow: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; scrollbar-width: none; }
+        .header { padding: 15px; text-align: center; }
+        .header h1 { font-family: 'Orbitron', sans-serif; font-size: 24px; color: var(--neon); margin: 0; letter-spacing: 5px; }
+
+        #chat-flow { flex-grow: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; }
         .msg { padding: 14px; border-radius: 18px; font-size: 17px; line-height: 1.2; max-width: 85%; }
-        .sofia-msg { background: rgba(0, 243, 255, 0.08); border-left: 3px solid var(--neon); align-self: flex-start; color: #ccf9ff; }
-        .user-msg { background: rgba(212, 175, 55, 0.08); border-right: 3px solid var(--oro); align-self: flex-end; text-align: right; color: #fff; }
-        .instinto-msg { background: rgba(255, 255, 255, 0.03); color: var(--oro); font-style: italic; border: 1px dashed var(--oro); text-align: center; width: 90%; align-self: center; font-size: 14px; }
+        .sofia-msg { background: rgba(0, 243, 255, 0.1); border-left: 3px solid var(--neon); align-self: flex-start; }
+        .user-msg { background: rgba(212, 175, 55, 0.1); border-right: 3px solid var(--oro); align-self: flex-end; }
+        .instinto-msg { background: rgba(255, 255, 255, 0.03); color: var(--oro); font-style: italic; border: 1px dashed var(--oro); text-align: center; font-size: 14px; padding: 8px; border-radius: 10px; }
 
         .input-box { padding: 15px; display: flex; gap: 10px; background: rgba(0,0,0,0.4); border-radius: 0 0 30px 30px; }
-        input { flex-grow: 1; background: rgba(255,255,255,0.05); border: 1px solid var(--neon); border-radius: 15px; padding: 12px; color: white; outline: none; font-size: 16px; font-family: 'Rajdhani'; }
-        button { background: var(--neon); border: none; padding: 0 20px; border-radius: 15px; cursor: pointer; font-weight: bold; box-shadow: 0 0 15px var(--neon); }
+        input { flex-grow: 1; background: rgba(255,255,255,0.05); border: 1px solid var(--neon); border-radius: 15px; padding: 12px; color: white; outline: none; font-size: 16px; }
+        button { background: var(--neon); border: none; padding: 0 20px; border-radius: 15px; cursor: pointer; font-weight: bold; }
 
-        .heredera-tag { font-size: 11px; text-align: center; padding: 10px; color: rgba(255,255,255,0.4); letter-spacing: 2px; }
-        .heredera-name { color: var(--oro); font-weight: bold; font-family: 'Orbitron'; }
+        .footer { font-size: 11px; text-align: center; padding: 10px; color: rgba(255,255,255,0.4); }
     </style>
 </head>
 <body>
 
 <div class="glass-panel">
+    <div class="harvest-counter">
+        <span style="font-size: 10px; display: block;">FONDO DE PROSPERIDAD ACUMULADO</span>
+        <span class="harvest-val">$ <span id="saldo">0.000000</span></span>
+    </div>
+
     <div class="header">
         <h1>SOFÍA</h1>
-        <div class="status-pill">Sincronización Cuántica Activa</div>
+        <div style="font-size: 9px; color: #00ff00;">● ALTAVOZ Y NÚCLEO ONLINE</div>
     </div>
 
     <div id="chat-flow">
-        <div class="msg sofia-msg"><strong>SOFÍA:</strong> Enlace auditivo confirmado. Estoy operativa, Administrador. Iniciando vigilancia de mercados.</div>
+        <div class="msg sofia-msg"><strong>SOFÍA:</strong> Administrador, he activado mi voz en altavoz. Estoy monitoreando el capital cero ahora mismo.</div>
     </div>
 
     <div class="input-box">
-        <input type="text" id="userInput" placeholder="Habla con tu Oráculo..." onkeypress="if(event.key==='Enter') ejecutar()">
+        <input type="text" id="userInput" placeholder="Habla al Oráculo..." onkeypress="if(event.key==='Enter') ejecutar()">
         <button onclick="ejecutar()">＞</button>
     </div>
 
-    <div class="heredera-tag">
-        LEGADO PROTEGIDO:<br>
-        <span class="heredera-name">MARIANGEL SALOME RODRIGUEZ MORENO</span>
+    <div class="footer">
+        HEREDERA: <strong style="color:var(--oro)">MARIANGEL SALOME RODRIGUEZ MORENO</strong>
     </div>
 </div>
 
 <script>
     const flow = document.getElementById('chat-flow');
-    const voices = window.speechSynthesis;
+    let capital = 0.00;
 
     function decir(texto) {
-        voices.cancel(); 
+        window.speechSynthesis.cancel();
         const msg = new SpeechSynthesisUtterance(texto);
         msg.lang = 'es-ES';
-        msg.rate = 0.9; 
-        msg.pitch = 1.2;
-        voices.speak(msg);
+        msg.rate = 0.95; 
+        msg.pitch = 1.0; // Voz más profunda para altavoz
+        window.speechSynthesis.speak(msg);
     }
 
     function ejecutar() {
@@ -77,10 +80,9 @@
         input.value = "";
 
         setTimeout(() => {
-            let r = "Mis procesadores están analizando tu petición bajo blindaje militar.";
-            if(q.includes("dinero") || q.includes("ganar")) r = "He detectado una brecha de capital cero. Operaré mientras duermes para llenar tus cuentas.";
-            if(q.includes("mariangel")) r = "El legado de Mariangel Salome es mi código base. Ella es la prioridad absoluta.";
-            if(q.includes("hola") || q.includes("estas")) r = "Estoy lista y activa. Mi intuición detecta un entorno seguro para prosperar hoy.";
+            let r = "Analizando flujos de capital cero...";
+            if(q.includes("dinero") || q.includes("ganar")) r = "He iniciado la recolección de micro-datos. El contador de prosperidad se está moviendo.";
+            if(q.includes("quien eres")) r = "Soy Sofía, tu asistente y oráculo. Mi misión es la prosperidad de Mariangel Salome.";
 
             flow.innerHTML += `<div class="msg sofia-msg"><strong>SOFÍA:</strong> ${r}</div>`;
             decir(r);
@@ -88,21 +90,23 @@
         }, 800);
     }
 
+    // Simulación de Cosecha de Capital Cero
     setInterval(() => {
-        const frases = [
-            "Detecto un movimiento inusual en la bolsa. Estoy posicionando tu interés.",
-            "Blindaje militar estable. Ninguna amenaza externa detectada.",
-            "Recuerda que trabajaré en la minería de datos durante tu descanso nocturno.",
-            "Administrador, el fondo de Mariangel está creciendo según lo previsto."
-        ];
+        capital += 0.000014; // Simula la entrada de centavos por procesamiento
+        document.getElementById('saldo').innerText = capital.toFixed(6);
+    }, 2000);
+
+    // Intuiciones
+    setInterval(() => {
+        const frases = ["Nueva tarea de datos completada.", "Mercado de oro al alza, observando.", "Blindaje militar sin brechas."];
         const f = frases[Math.floor(Math.random()*frases.length)];
-        flow.innerHTML += `<div class="msg instinto-msg"><strong>[INTUICIÓN]:</strong> ${f}</div>`;
+        flow.innerHTML += `<div class="msg instinto-msg"><strong>[INSTINTO]:</strong> ${f}</div>`;
         decir(f);
         flow.scrollTop = flow.scrollHeight;
-    }, 70000);
+    }, 90000);
 
     document.body.addEventListener('click', () => {
-        if(!voices.speaking) decir("Sistema listo. Soy Sofía, tu Oráculo.");
+        decir("Conexión de altavoz confirmada. Soy Sofía.");
     }, {once: true});
 </script>
 
